# rubiks-code

./: .gitmodules
AOC/Rust/2019/: Cargo.toml
AOC/Rust/2019/days/day_1/: Cargo.toml
AOC/Rust/2020/: Cargo.toml
AOC/Rust/2020/days/day_10/: Cargo.toml
AOC/Rust/2020/days/day_11/: Cargo.toml
AOC/Rust/2020/days/day_11/src/: main.rs
AOC/Rust/2020/days/day_11/src/solutions/: naive.rs  tests.rs
AOC/Rust/2020/days/day_11/tests/: naive.rs
AOC/Rust/2020/days/day_12/: Cargo.toml
AOC/Rust/2020/days/day_13/: Cargo.toml
AOC/Rust/2020/days/day_14/: Cargo.toml
AOC/Rust/2020/days/day_14/src/solutions/: naive.rs  tests.rs
AOC/Rust/2020/days/day_14/tests/: naive.rs
AOC/Rust/2020/days/day_15/: Cargo.toml
AOC/Rust/2020/days/day_16/: Cargo.toml
AOC/Rust/2020/days/day_3/: Cargo.toml
AOC/Rust/2020/days/day_3/src/: lib.rs
AOC/Rust/2020/days/day_4/: Cargo.toml
AOC/Rust/2020/days/day_5/: Cargo.toml
AOC/Rust/2020/days/day_6/: Cargo.toml
AOC/Rust/2020/days/day_6/src/: lib.rs
AOC/Rust/2020/days/day_6/src/solutions/: naive.rs  tests.rs
AOC/Rust/2020/days/day_6/tests/: naive.rs
AOC/Rust/2020/days/day_7/: Cargo.toml
AOC/Rust/2020/days/day_8/: Cargo.toml
AOC/Rust/2020/days/day_9/: Cargo.toml
AOC/Rust/aoclib/: Cargo.toml
AOC/Rust/aoclib/src/: lib.rs
Leetcode/Rust/daily/: Cargo.toml
Leetcode/Rust/daily/problems/102/: Cargo.toml
Leetcode/Rust/daily/problems/105/: Cargo.toml
Leetcode/Rust/daily/problems/1074/: Cargo.toml
Leetcode/Rust/daily/problems/118/: Cargo.toml
Leetcode/Rust/daily/problems/1473/: Cargo.toml
leetcode/Rust/daily/: Cargo.toml
(+74 files in other folders)
