[package]
name = "day_11"
version = "0.1.0"
authors = ["Tanjim Hossain <audacioustux@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
aoclib = { path = "../../../aoclib" }
lazy_static = "1.4"
itertools = "0.9"
regex = "1"
ansi_term = "0.12"
crossterm = "0.18"
