[package]
name = "day_6"
version = "0.1.0"
authors = ["Tanjim Hossain <audacioustux@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoclib = { path = "../../../aoclib" }
lazy_static = "*"
itertools = "*"
